# src/controller/MovieController.ts
@@ -233,6 +233,23 @@ export class MovieController {
 		}
 	}
 
+	getMoviesRelated = async (req: Request, res: Response) => {
+		try {
+			const page = Number(req.query.page) || 1; // Trang mặc định là 1
+			const pageSize = Number(req.query.pageSize) || 15; // Số lượng kết quả trên mỗi trang mặc định là 10
+			const movieId = Number(req.query.movieId);
+
+			const movies = await this.recommenderService.getRelatedMovies(movieId,page,pageSize);
+			return res.json({
+				message:"Successfully",
+				data: movies
+			});
+		} catch (error) {
+			console.log(error);
+			console.log("Err while get recommend movies");
+		}
+	}
+
 	getAllNations = async (req: Request, res: Response) => {
 		try {
 			const nations = await this.movieService.getAllNations();
@@ -388,8 +405,10 @@ export class MovieController {
 
 	test= async(req: Request, res: Response) => {
 		try {
-			const userId = Number(req.payload.userId);
-			const results =  await this.recommenderService.testData(userId);
+			// const userId = Number(req.payload.userId);
+			// const results =  await this.recommenderService.testData(userId);
+			const results =  await this.recommenderService.testData(1);
+
 			res.status(200).json({
 				message: "successful",
 				qrCode:results
